# StantechAI

./: main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 07040bdc0297_your_change.py  96184e6d84f5_create_items_table.py
app/: main.py  test.db
app/core/: config.py  exceptions.py  logging.py
app/crud/: item.py
app/db/: database.py
app/models/: item.py
app/routers/: items.py
app/schemas/: item.py
app/tests/: test_items.py  test_logic.py
